# cft-cancer-sim

./: README.md  pyproject.toml
scripts/: plot_gv.py
src/cancer_project/: __init__.py  cancer_cell.py  cell_base.py  env.py  grid.py  gv.py  healthy_cell.py  intervention.py  sim.py
src/cancer_project/scripts/: plot_grid.py  plot_gv.py
tests/: test_healthy_cell_smoke.py  test_healthy_vs_cancer.py
