[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cancer-project"
version = "0.1.0"
description = "Toy cancer dynamics simulator with GV (scalar strain) + CFT-inspired constraints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
